<resources>
    <string name="app_name">AplicacaoBancoDeDados</string>
    <string name="trabalhando_com_banco_de_dados_no_android">Trabalhando com Banco de Dados no Android</string>
    <string name="escolha_uma_das_op_es_abaixo">Escolha uma das opções abaixo:</string>
    <string name="criar_banco_de_dados">Criar Banco de Dados</string>
    <string name="todo">TODO</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="e_mail">E-Mail:</string>
    <string name="cadastro_de_usu_rio">Cadastro de Usuário</string>
    <string name="telefone">Telefone:</string>
    <string name="nome">Nome:</string>
    <string name="senha">Senha:</string>
    <string name="esta_aplica_o_ir_registrar_as_informa_es_do_usu_rio_no_banco_de_dados">Esta aplicação irá registrar as informações do usuário no Banco de Dados.</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="novo_personagem">Novo Personagem</string>
    <string name="personagens">Personagens</string>
    <string name="reg_usuario">Registrar</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="status">#status</string>
    <string name="consultar_dados">Consultar Dados</string>
    <string name="nomeConsulta">[Nome]</string>
    <string name="telefoneConsulta">[Telefone]</string>
    <string name="emailConsulta">[E-Mail]</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="alterar_dados2">Alterar Dados (2ª Edição)</string>
    <string name="nomeAltera">[Nome]</string>
    <string name="telefoneAltera">[Telefone]</string>
    <string name="emailAltera">[E-Mail]</string>
    <string name="excluir_dados">Excluir Dados</string>
    <string name="nomeColchetes">[Nome]</string>
    <string name="telefoneColchetes">[Telefone]</string>
    <string name="emailColchetes">[EMail]</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="nome_personagem">Digite o nome do personagem</string>
    <string name="descricao">Descrição:</string>
    <string name="desc_chara">Descreva o personagem</string>
    <string name="add_chara">Adicionar</string>
    <string name="limpaus">Limpar Usuários</string>
    <string name="voltar">Voltar</string>
</resources>