<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context=".VisualizaCharaActivity" >

    <LinearLayout

        android:id="@+id/linearLayout1"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="#608b55" >



        <ImageView

            android:id="@+id/imageView1"

            android:layout_width="72dp"

            android:layout_height="72dp"

            android:contentDescription="@string/todo"

            android:src="@drawable/sap_logo" />

        <TextView

            android:id="@+id/textView1"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceLarge"

            />

        <LinearLayout

            android:id="@+id/layoutCorFundo"

            android:layout_width="fill_parent"

            android:layout_height="match_parent"

            android:background="#608b55"

            android:gravity="center" >



        </LinearLayout>

    </LinearLayout>



    <TextView

        android:id="@+id/textView3"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:paddingTop="10dp"

        android:textAppearance="?android:attr/textAppearanceSmall"

        android:textColor="#000000"

        android:textSize="18sp"

        tools:text="@string/nome" />



    <EditText

        android:id="@+id/txtnome"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:ems="10"

        android:hint="@string/nome_personagem"

        android:importantForAutofill="no"

        android:inputType="text" />



    <TextView

        android:id="@+id/textView4"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceSmall"

        android:textColor="#000000"

        android:textSize="18sp"

        tools:text="@string/descricao" />


    <EditText

        android:id="@+id/txtdesc"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:ems="10"

        android:hint="@string/desc_chara"

        android:importantForAutofill="no"

        android:inputType="textMultiLine">


        <requestFocus />

    </EditText>



    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:gravity="center"

        android:paddingTop="0dp" >



        <ImageView

            android:id="@+id/imgprimeiro"

            android:layout_width="50dp"

            android:layout_height="50dp"

            android:contentDescription="@string/todo"

            android:scaleType="fitXY"

            android:src="@drawable/botao_alt_primeiro" />



        <ImageView

            android:id="@+id/imganterior"

            android:layout_width="50dp"

            android:layout_height="50dp"

            android:contentDescription="@string/todo"

            android:scaleType="fitXY"

            android:src="@drawable/botao_alt_anterior" />



        <ImageView

            android:id="@+id/imgproximo"

            android:layout_width="50dp"

            android:layout_height="50dp"

            android:contentDescription="@string/todo"

            android:scaleType="fitXY"

            android:src="@drawable/botao_alt_proximo" />



        <ImageView

            android:id="@+id/imgultimo"

            android:layout_width="50dp"

            android:layout_height="50dp"

            android:contentDescription="@string/todo"

            android:scaleType="fitXY"

            android:src="@drawable/botao_alt_ultimo" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:gravity="center"

        android:paddingTop="0dp" >



        <TextView

            android:id="@+id/txtstatus_registro"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:contentDescription="@string/status"

            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:gravity="center" >

        <Button

            android:id="@+id/btalterardados"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/alterar_dados" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:gravity="center" >

        <Button

            android:id="@+id/btexcluirdados"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/excluir_dados" />

    </LinearLayout>

</LinearLayout>